--- a/P6/html/gene.html
+++ b/P6/html/gene.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
     <title>Seq server</title>
   </head>
   <body style="background-color: lightgreen;">
     <h1>GENE {{context.gene_name}}</h1>
-    <textarea id="gene_content" name=""gene_bases" ro/p>
+    <textarea id="gene_content" name="gene_bases" rows="5" cols="50">
+      {{context.gene_contents}}
+    </textarea>
+    <br>
     <a href="/">Main Page</a>
   </body>
 </html>
